Fix z-index in custom selector

--- a/app/assets/scss/custom-select.scss
+++ b/app/assets/scss/custom-select.scss
@@ -15,6 +15,7 @@
   width: 120px;
   user-select: none;
   margin-bottom: 4px;
+  z-index: 1;
 }
 
 .custom-select-trigger {
